syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package = "/rpc";

package passwordRPC;

service Password {
    rpc Store(requestStore) returns (google.protobuf.Empty) {}
    rpc Compare(requestCompare) returns (responseCompare) {}
    rpc DeletePassword(requestDeletePassword) returns (google.protobuf.Empty) {}
} 

message requestStore {
    passwordData data = 1;
}

message requestCompare {
    passwordData data = 1;
}

message responseCompare {
    bool pwdValid = 1;
}

message requestDeletePassword {
    int64 userID = 1;
}

// Custom message type: 

message passwordData {
    int64 userID = 1;
    string password = 2;
}
